prevent empty columns from collapsing

--- a/src/spartan.less
+++ b/src/spartan.less
@@ -260,6 +260,8 @@ Spartan grid version 4.0.0: https://github.com/SimonHarte/SpartanGrid
 		margin-left: 0 !important;
 		// columns should per default span the whole width if none is set
 		width: 100%;
+		// let empty columns not collapse
+		min-height: 1px;
 	}
 }
 
